[package]
name = "ukmm-extractool"
version = "0.2.2"
edition = "2021"
description = "Extract and rebuild UKMM mod files (.byml/.sarc) to/from editable YAML and native BYML"
repository = "https://github.com/Kalemillion/ukmm-extractool"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indexmap = { version = "2.2.6", features = ["serde"] }
mimalloc = { version = "0.1.43", default-features = false }
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
roead = { version = "1", features = ["with-serde", "yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.13"
sys-locale = "0.3"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
zstd = { version = "0.13.1", features = ["experimental"] }
is-terminal = "0.4"
minicbor = { version = "0.25.0", features = ["alloc", "full", "std"] }
rayon = "1.6"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "pipeline_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
